--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ sickle_math = { path = "crates/sickle_math", version = "0.2.3" }
 sickle_macros = { path = "crates/sickle_macros", version = "0.2.3" }
 sickle_ui_scaffold = { path = "crates/sickle_ui_scaffold", version = "0.2.3" }
 
-bevy = { version = "0.14", default-features = false, features = [
+bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
     "bevy_asset",
     "bevy_color",
     "bevy_state",
@@ -47,6 +47,7 @@ bevy = { version = "0.14", default-features = false, features = [
     "png",
     "tonemapping_luts",
     "x11",
+    "bevy_picking",
 ] }
 
 serde = { version = "1.0", features = ["derive"] }
