--- a/crates/sickle_ui_scaffold/Cargo.toml
+++ b/crates/sickle_ui_scaffold/Cargo.toml
@@ -15,13 +15,14 @@ disable-ui-context-placeholder-warn = []
 sickle_math = { path = "../sickle_math", version = "0.2.3" }
 sickle_macros = { path = "../sickle_macros", version = "0.2.3" }
 
-bevy = { version = "0.14", default-features = false, features = [
+bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
     "bevy_asset",
     "bevy_color",
     "bevy_state",
     "bevy_text",
     "bevy_ui",
     "bevy_winit",
+    "bevy_picking",
 ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
